refactoring tests class & userService class